# panda_moveit2_config

./: CMakeLists.txt  README.md  package.xml
config/: joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
config/fake_control/: start_position.yaml
launch/: move_group_action_server.launch.py  move_group_fake_control.launch.py
srdf/: panda.srdf  panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro
