<?xml version="1.0"?>
<package format="3">
    <name>panda_moveit2_config</name>
    <version>1.0.0</version>
    <description>MoveIt2 configuration for Franka Emika Panda robot</description>
    <maintainer email="orsula.andrej@gmail.com">Andrej Orsula</maintainer>
    <author>Andrej Orsula</author>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
